fix: header z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,7 +55,7 @@ body,
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2 !important;
 }
 
 #content {
